--- a/React/5.组件化开发(二).md
+++ b/React/5.组件化开发(二).md
@@ -417,3 +417,389 @@ const HelloWorldHOC = hoc(HelloWorld)
 
 ### props 增强
 
+高阶组件本质就是对传入的组件进行拦截，对原来你想具备的功能在拦截过程中进行增强
+
+```jsx
+import React, { PureComponent } from 'react'
+
+// 给一些需要特殊数据的组件，注入 props
+function enhanceUserInfo(OriginComponent) {
+  class NewComponent extends PureComponent {
+    constructor() {
+      super()
+      this.state = {
+        userinfo: {
+          name: 'bird',
+          age: 99
+        }
+      }
+    }
+    render() {
+      return <OriginComponent {...this.props} {...this.state.userinfo} />
+    }
+  }
+  return NewComponent
+}
+
+const Home = enhanceUserInfo(function (props) {
+  return <h1>Home {props.name}</h1>
+})
+
+const Profile = enhanceUserInfo(function (props) {
+  return <h1>Profile {props.banner}</h1>
+})
+
+export class App extends PureComponent {
+  render() {
+    return (
+      <div>
+        <Home />
+        <Profile banner={'aaa'} />
+      </div>
+    )
+  }
+}
+
+export default App
+```
+
+### Context 共享
+
+- `App.jsx`
+
+```jsx
+import React, { PureComponent } from 'react'
+import Product from './pages/Product'
+import ThemeContext from './context/theme_context'
+
+export class App extends PureComponent {
+  render() {
+    return (
+      <div>
+        <ThemeContext.Provider value={{ color: 'blue', size: 'mini' }}>
+          <Product />
+        </ThemeContext.Provider>
+      </div>
+    )
+  }
+}
+
+export default Appimport React, { PureComponent } from 'react'
+
+// 给一些需要特殊数据的组件，注入 props
+function enhanceUserInfo(OriginComponent) {
+  class NewComponent extends PureComponent {
+    constructor() {
+      super()
+      this.state = {
+        userinfo: {
+          name: 'bird',
+          age: 99
+        }
+      }
+    }
+    render() {
+      return <OriginComponent {...this.props} {...this.state.userinfo} />
+    }
+  }
+  return NewComponent
+}
+
+const Home = enhanceUserInfo(function (props) {
+  return <h1>Home {props.name}</h1>
+})
+
+const Profile = enhanceUserInfo(function (props) {
+  return <h1>Profile {props.banner}</h1>
+})
+
+export class App extends PureComponent {
+  render() {
+    return (
+      <div>
+        <Home />
+        <Profile banner={'aaa'} />
+      </div>
+    )
+  }
+}
+
+export default App
+```
+
+- `pages/Product.jsx`
+
+```jsx
+import React, { PureComponent } from 'react'
+import ThemeContext from '../context/theme_context'
+import withTheme from '../hoc/with_theme.js'
+
+/* export class Product extends PureComponent {
+  render() {
+    return (
+      <div>
+        <ThemeContext.Consumer>
+          {value => {
+            return (
+              <h2>
+                theme {value.color} - {value.size}
+              </h2>
+            )
+          }}
+        </ThemeContext.Consumer>
+      </div>
+    )
+  }
+} */
+
+export class Product extends PureComponent {
+  render() {
+    const { color, size } = this.props
+    return (
+      <div>
+        Product {color}-{size}
+      </div>
+    )
+  }
+}
+
+export default withTheme(Product)
+```
+
+`context/theme_context.jsx`
+
+```jsx
+import ThemeContext from '../context/theme_context'
+
+function withTheme(OriginComponent) {
+  return props => {
+    return (
+      <ThemeContext.Consumer>
+        {value => {
+          return <OriginComponent {...value} {...props} />
+        }}
+      </ThemeContext.Consumer>
+    )
+  }
+}
+
+export default withTheme
+```
+
+### 登录鉴权
+
+- `App.jsx`
+  - 不推荐使用 forceUpdate 刷新视图，推荐更改 state 刷新视图
+
+```jsx
+import React, { PureComponent } from 'react'
+import Cart from './pages/Cart'
+
+export class App extends PureComponent {
+  loginClick() {
+    localStorage.setItem('token', 'token')
+    this.forceUpdate()
+  }
+  logoutClick() {
+    localStorage.removeItem('token')
+    this.forceUpdate()
+  }
+
+  render() {
+    return (
+      <div>
+        App
+        <button onClick={e => this.loginClick()}>登录</button>
+        <button onClick={e => this.logoutClick()}>登出</button>
+        <Cart />
+      </div>
+    )
+  }
+}
+
+export default App
+```
+
+`pages/Cart`
+
+```jsx
+import React, { PureComponent } from 'react'
+import loginAuth from '../hoc/login_auth'
+
+
+export class Cart extends PureComponent {
+  render() {
+    return (
+      <div>
+        <h2>Cart</h2>
+      </div>
+    )
+  }
+}
+
+export default loginAuth(Cart)
+```
+
+`hoc/login_auth.js`
+
+```jsx
+function loginAuth(OriginComponent) {
+  return props => {
+    const token = localStorage.getItem('token')
+    if (token) {
+      return <OriginComponent {...props} />
+    } else {
+      return <h2>请先登录</h2>
+    }
+  }
+}
+
+export default loginAuth
+```
+
+### 生命周期
+
+```jsx
+import { PureComponent } from 'react'
+
+function logRenderTime(OriginComponent) {
+  return class extends PureComponent {
+    UNSAFE_componentWillMount() {
+      this.beginTime = new Date().getTime()
+    }
+    componentDidMount() {
+      this.endTime = new Date().getTime()
+      const interval = this.endTime - this.beginTime
+      console.log(`当前${OriginComponent.name}页面花费了${interval}ms渲染完成!`)
+    }
+
+    render() {
+      return <OriginComponent {...this.props} />
+    }
+  }
+}
+
+export default logRenderTime
+```
+
+### 意义
+
+利用高阶组件可以针对某些 React 代码进行更加优雅的处理
+
+早期的 React 有提供组件之间的一种复用方式是 mixin，目前已经不再建议使用：
+
+- Mixin 可能会**相互依赖，相互耦合，不利于代码维护**
+- **不同的 Mixin 中的方法可能会相互冲突**
+- Mixin 非常多时，组件处理起来会比较麻烦，甚至还要为其做相关处理，这样会给代码造成滚雪球式的复杂性
+
+HOC 也有自己的一些缺陷：
+
+- HOC 需要在**原组件上进行包裹或者嵌套，如果大量使用 HOC**，将**会产生非常多的嵌套**，这让**调试变得非常困难**
+- HOC 可以**劫持 props，在不遵守约定的情况下也可能造成冲突**
+
+Hooks 的出现，是开创性的，它解决了很多 React 之前的存在的问题
+
+- 比如 this 指向问题、比如 hoc 的嵌套复杂度问题等等
+
+函数式组件中的高阶组件：
+
+- memo -> PureComponent
+- forwardRef -> function(props, ref) {}
+
+## Portals
+
+某些情况下，我们希望渲染的内容独立于父组件，甚至是独立于当前挂载到的 DOM 元素中（默认都是挂载到 id 为 root 的 DOM 元素上的）
+
+Portal 提供了一种将子节点渲染到存在于父组件以外的 DOM 节点的优秀的方案：
+
+- 第一个参数（child）是**任何可渲染的 React 子元素**，例如一个元素、字符串或 fragment
+- 第二个参数（container）是**一个 DOM 元素**
+
+通常来讲，当你从组件的 render 方法返回一个元素时，该元素将被挂载到 DOM 节点中离其最近的父节点
+
+```jsx
+import React, { PureComponent } from 'react'
+import { createPortal } from 'react-dom'
+
+export class App extends PureComponent {
+  render() {
+    return (
+      <div className='app'>
+        <h1>h1</h1>
+        {createPortal(<h2>h2</h2>, document.querySelector('#why'))}
+      </div>
+    )
+  }
+}
+
+export default App
+```
+
+## fragment
+
+在之前的开发中，我们总是在一个组件中返回内容时包裹一个 div 元素
+
+![image-20221118145130775](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221118145130775.png)
+
+如果我们希望可以不渲染这样一个 div 应该如何操作？
+
+- 使用 Fragment
+- Fragment 允许你将子列表分组，而无需向 DOM 添加额外节点
+
+React 还提供了 Fragment 的短语法：
+
+- 它看起来像空标签 `<></>`
+- 如果我们需要在 Fragment 中添加 key，那么就不能使用短语法
+
+```jsx
+import React, { PureComponent, Fragment } from 'react'
+
+export class App extends PureComponent {
+  constructor() {
+    super()
+    this.state = {
+      sections: [
+        { title: '哈哈哈', content: '我是内容, 哈哈哈' },
+        { title: '呵呵呵', content: '我是内容, 呵呵呵' }
+      ]
+    }
+  }
+
+  render() {
+    const { sections } = this.state
+    return (
+      <>
+        {sections.map(item => {
+          return (
+            <Fragment key={item.title}>
+              <h2>{item.title}</h2>
+              <p>{item.content}</p>
+            </Fragment>
+          )
+        })}
+      </>
+    )
+  }
+}
+```
+
+## StrictMode
+
+StrictMode 是一个用来突出显示应用程序中潜在问题的工具：
+
+- 与 Fragment 一样，StrictMode 不会渲染任何可见的 UI
+- 它为其后代元素触发额外的检查和警告
+- 严格模式检查仅在开发模式下运行，它们不会影响生产构建
+
+严格模式检查什么？
+
+1. 识别不安全的生命周期
+2. 使用过时的 ref API
+3. 检查意外的副作用
+   - 这个组件的 constructor 会被调用两次
+   - 这是严格模式下故意进行的操作，让你来查看在这里写的一些逻辑代码被调用多次时，是否会产生一些副作用
+   - 在生产环境中，是不会被调用两次的
+4. 使用废弃的 findDOMNode 方法
+   - 在之前的 React API中，可以通过 findDOMNode 来获取 DOM，不过已经不推荐使用了
+5. 检测过时的 context API
+   - 早期的 Context 是通过 static 属性声明 Context 对象属性，通过 getChildContext 返回 Context 对象等方式来使用 Context 的
