--- a/Vue3/项目搭建规范.md
+++ b/Vue3/项目搭建规范.md
@@ -145,7 +145,7 @@ VSCode 需要安装一个插件：Prettier - Code formatter
 
 VSCode 需要安装一个插件：ESLint
 
-![image-20220915102240487](E:\learn\lagouBigFront\md\Vue3\img\image-20220915102240487.png)
+![image-20220915102240487](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220915102240487.png)
 
 此时会出现 ESLint 和 Prettier 冲突问题：
 
@@ -204,7 +204,7 @@ npx husky-init && npm i
 
 - 执行 git commit 的时候会自动对代码进行 lint 校验
 
-![image-20220915105251160](E:\learn\lagouBigFront\md\Vue3\img\image-20220915105251160.png)
+![image-20220915105251160](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220915105251160.png)
 
 ### git commit 规范
 
@@ -300,10 +300,18 @@ npx husky-init && npm i
     }
     ```
 
-3. 使用husky生成commit-msg文件，验证提交信息：
+3. 使用 husky 生成 commit-msg 文件，验证提交信息：
 
     ```bash
-    npx husky add .husky/commit-msg "npx --no-install commitlint --edit $1"
+    npx husky add .husky/commit-msg
+    ```
+    
+    在 `.husky/commit-msg` 文件中加入如下命令
+    
+    ![image-20221122211546031](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221122211546031.png)
+    
+    ```bash
+    npx --no-install commitlint --edit
     ```
 
 ## 第三方库集成
