修改图片上传

--- a/Docker/前端部署.md
+++ b/Docker/前端部署.md
@@ -70,4 +70,4 @@
 
 - 如果部署失败或在新环境中发生 bug，就需要进行回滚 Rollback
 
-![image-20220819181247769](E:\learn\lagouBigFront\md\Docker\img\image-20220819181247769.png)
+![image-20220819181247769](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220819181247769.png)
