--- a/HTTP/2.HTTP头.md
+++ b/HTTP/2.HTTP头.md
@@ -79,7 +79,7 @@ $ curl "http://httpbin.org/headers" -H "A: 3" -H "b:    4"
 
 - 内容协商，告知服务器端我需要什么样的资源，比如语言以及压缩编码，如果服务器无法返回对应的资源，则返回 406(Not Acceptable) 状态码
 
-![img](E:\learn\lagouBigFront\md\HTTP\img\httpnegoserver.png)
+![img](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/httpnegoserver.png)
 
 - `Accept`：我（客户端）需要什么样的资源，比如 json 与 html
 - `Accept-Encoding`：我需要什么样的压缩编码，比如 gzip 与 br，如果不配置则可能不进行压缩
