--- a/HTTP/4.HTTP缓存.md
+++ b/HTTP/4.HTTP缓存.md
@@ -69,7 +69,7 @@ GET /a.js   ----------->
 
 ## 14. 强缓存与 age/max-age
 
-![image-20221026151542192](E:\learn\lagouBigFront\md\HTTP\img\image-20221026151542192.png)
+![image-20221026151542192](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221026151542192.png)
 
 一条 HTTP 响应，从源服务器到客户端需要经过多个 Proxy，包括 Nginx 反向代理、CDN 等
 
