--- a/Vue3/14-Vue3源码.md
+++ b/Vue3/14-Vue3源码.md
@@ -614,13 +614,13 @@ setup 会把结果放到 setupState 里
 
 调用 compiler 函数
 
-![image-20220816092250624](E:\learn\lagouBigFront\md\Vue3\img\image-20220816092250624.png)
+![image-20220816092250624](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816092250624.png)
 
 对 vue2.x 的 options api 进行支持
 
 - `applyOptions` 里处理生命周期、methods、computed...
 
-![image-20220816092322882](E:\learn\lagouBigFront\md\Vue3\img\image-20220816092322882.png)
+![image-20220816092322882](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816092322882.png)
 
 ### Compile 过程
 
@@ -663,7 +663,7 @@ Scope Hoisting、Block Tree -> Vue3 性能优化
 
 setupState 是 setup 的返回结果
 
-![image-20220816142031574](E:\learn\lagouBigFront\md\Vue3\img\image-20220816142031574.png)
+![image-20220816142031574](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816142031574.png)
 
 最后通过一个 if 进行判断，取值优先级顺序如下：
 
