--- a/Vue3/项目搭建规范.md
+++ b/Vue3/项目搭建规范.md
@@ -306,6 +306,8 @@ npx husky-init && npm i
     npx husky add .husky/commit-msg
     ```
     
+    > 注意：在 Windows 下不要直接执行 `npx husky add .husky/commit-msg "npx --no-install commitlint --edit $1"`
+    
     在 `.husky/commit-msg` 文件中加入如下命令
     
     ![image-20221122211546031](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221122211546031.png)
