--- a/React/8.rudux.md
+++ b/React/8.rudux.md
@@ -19,7 +19,7 @@
 
 在计算机科学中，也引用了副作用的概念，表示在执行一个函数时，除了返回函数值之外，还对调用函数产生了附加的影响，比如修改了全局变量，修改参数或者改变外部的存储； 
 
-![image-20221213213144785](./img/image-20221213213144785.png)
+![image-20221213213144785](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221213213144785.png)
 
 **React 是在视图层帮助我们解决了 DOM 的渲染过程，但是 State 依然是留给我们自己来管理：**
 
@@ -32,7 +32,7 @@
 
 **Store**
 
-![image-20221213221152962](./img/image-20221213221152962.png)
+![image-20221213221152962](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221213221152962.png)
 
 **action**
 
@@ -41,14 +41,14 @@
 - 所有数据的变化，必须通过派发（dispatch）action来更新
 - action 是一个普通的 JavaScript 对象，用来描述这次更新的 type 和 content
 
-![image-20221213221205960](./img/image-20221213221205960.png)
+![image-20221213221205960](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221213221205960.png)
 
 **reducer**
 
 - reducer 是一个纯函数
 - reducer 做的事情就是将传入的 state 和 action 结合起来生成一个新的 state
 
-![image-20221213221231473](./img/image-20221213221231473.png)
+![image-20221213221231473](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221213221231473.png)
 
 ## 三大原则
 
@@ -77,15 +77,17 @@
 - 创建store/actionCreators.js文件
 - 创建store/constants.js文件
 
-![image-20221214094925090](./img/image-20221214094925090.png)
+![image-20221214094925090](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214094925090.png)
 
 ## 图
 
-![image-20221214094906375](./img/image-20221214094906375.png)
+![image-20221214094906375](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214094906375.png)
+
+
 
 ## 页面中使用 redux
 
-![image-20221214110301614](./img/image-20221214110301614.png)
+![image-20221214110301614](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214110301614.png)
 
 # react-redux
 
@@ -95,7 +97,7 @@
 
 ## 页面中使用 react-redux
 
-![image-20221214110009978](./img/image-20221214110009978.png)
+![image-20221214110009978](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214110009978.png)
 
 ## 异步操作 redux-thunk
 
@@ -108,7 +110,7 @@
 - 这个中间件的目的是在 dispatch 的 action 和最终达到的 reducer 之间，扩展一些自己的代码
 - 比如日志记录、调用异步接口、添加代码调试功能等等
 
-![image-20221216090852993](./img/image-20221216090852993.png)
+![image-20221216090852993](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221216090852993.png)
 
 **redux-thunk 是如何做到让我们可以发送异步的请求呢？**
 
@@ -118,9 +120,9 @@
   - dispatch 函数用于我们之后再次派发 action
   - getState 函数考虑到我们之后的一些操作需要依赖原来的状态，用于让我们可以获取之前的一些状态
 
-![image-20221214153720855](./img/image-20221214153720855.png)
+![image-20221214153720855](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214153720855.png)
 
-![image-20221214153919052](./img/image-20221214153919052.png)
+![image-20221214153919052](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214153919052.png)
 
 **增加 Redux-devtools** 
 
@@ -209,13 +211,13 @@ export default mySaga
 
 ## Reducer文件拆分
 
-![image-20221214161058921](./img/image-20221214161058921.png)
+![image-20221214161058921](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214161058921.png)
 
 **combineReducers 函数**
 
 - **redux 给我们提供了一个 combineReducers函数 可以方便的让我们对多个reducer进行合并**
 
-![image-20221214161407961](./img/image-20221214161407961.png)
+![image-20221214161407961](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214161407961.png)
 
 **combineReducers是如何实现的呢？**
 
@@ -248,7 +250,7 @@ function reducer(state = {}, action) {
 - createSlice：接受 reducer 函数的对象、切片名称和初始状态值，并自动生成切片. reducer，并带有相应的 actions
 - createAsyncThunk: 接受一个动作类型字符串和一个返回承诺的函数，并生成一个 pending/fulfilled/rejected 基于该承诺分派动作类型的 thunk
 
-![image-20221214164322621](./img/image-20221214164322621.png)
+![image-20221214164322621](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214164322621.png)
 
 ## createSlice
 
@@ -272,7 +274,7 @@ reducers：相当于之前的 reducer 函数
 
 **createSlice 返回值是一个对象，包含所有的 actions**
 
-![image-20221214164253407](./img/image-20221214164253407.png)
+![image-20221214164253407](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221214164253407.png)
 
 ## 异步操作
 
@@ -286,17 +288,17 @@ reducers：相当于之前的 reducer 函数
 - fulfilled：获取到最终的结果（有返回值的结果）
 - rejected：执行过程中有错误或者抛出了异常
 
-![image-20221215102830153](./img/image-20221215102830153.png)
+![image-20221215102830153](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221215102830153.png)
 
 **extraReducer 还可以传入一个函数，函数接受一个 builder 参数**
 
 - 我们可以向 builder 中添加 case 来监听异步操作的结果
 
-![image-20221215103216116](./img/image-20221215103216116.png)
+![image-20221215103216116](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221215103216116.png)
 
 当然也可以不使用 extraReducers 直接 dispatch
 
-![image-20221215103417166](./img/image-20221215103417166.png)
+![image-20221215103417166](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221215103417166.png)
 
 ## 数据不可变
 
@@ -314,7 +316,7 @@ reducers：相当于之前的 reducer 函数
 
 > [https://mp.weixin.qq.com/s/hfeCDCcodBCGS5GpedxCGg](https://mp.weixin.qq.com/s/hfeCDCcodBCGS5GpedxCGg)
 
-![640 (613×575)](./img/640.gif)
+![640 (613×575)](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/640.gif)
 
 # 实现原理
 
