--- a/React/10.hooks.md
+++ b/React/10.hooks.md
@@ -558,3 +558,205 @@ function useLocalStorage(key) {
 }
 ```
 
+## redux hook
+
+在之前的 redux 开发中，为了让组件和 redux 结合起来，我们使用了 react-redux 中的 connect
+
+- 但是这种方式必须使用高阶组件返回的高阶组件
+- 并且必须编写：mapStateToProps 和 mapDispatchToProps 映射的函数
+
+在 Redux7.1 开始，提供了 Hook 的方式，不需要再编写 connect 以及对应的映射函数了
+
+useSelector 的作用是将 state 映射到组件中
+
+- 参数一：将 state 映射到需要的数据中
+- 参数二：可以进行比较来决定是否组件重新渲染
+
+useDispatch 就是直接获取 dispatch 函数，之后在组件中直接使用即可
+
+```jsx
+import React, { memo } from 'react'
+import { useSelector, useDispatch, shallowEqual } from 'react-redux'
+import {
+  addNumberAction,
+  changeMessageAction,
+  subNumberAction
+} from './store/modules/counter'
+
+// memo 高阶组件包裹起来的组件有对应的特点: 只有 props 发生改变时, 才会重新渲染
+const Home = memo(props => {
+  const { message } = useSelector(
+    state => ({
+      message: state.counter.message
+    }),
+    shallowEqual
+  )
+  const dispatch = useDispatch()
+  function changeMessageHandle() {
+    dispatch(changeMessageAction('你好啊，世界!'))
+  }
+  console.log('Home render')
+  return (
+    <div>
+      <h2>Home: {message}</h2>
+      <button onClick={e => changeMessageHandle()}>修改message</button>
+    </div>
+  )
+})
+
+const App = memo(props => {
+  // 1.使用 useSelector 将 redux 中 store 的数据映射到组件内
+  const { count } = useSelector(
+    state => ({
+      count: state.counter.count
+    }),
+    shallowEqual
+  )
+  // 2.使用 dispatch 直接派发 action
+  const dispatch = useDispatch()
+  function addNumberHandle(num, isAdd = true) {
+    if (isAdd) {
+      dispatch(addNumberAction(num))
+    } else {
+      dispatch(subNumberAction(num))
+    }
+  }
+  console.log('App render')
+  return (
+    <div>
+      <h2>当前计数: {count}</h2>
+      <button onClick={e => addNumberHandle(1)}> +1 </button>
+      <button onClick={e => addNumberHandle(1, false)}> -1 </button>
+      <Home />
+    </div>
+  )
+})
+```
+
+## useId
+
+useId 是一个用于生成横跨服务端和客户端的稳定的唯一 ID 的同时避免 hydration 不匹配的 hook
+
+- SSR（Server Side Rendering，服务端渲染），指的是页面在服务器端已经生成了完成的 HTML 页面结构，不需要浏览器通过执行 JS 代码，创建页面结构
+- CSR（Client Side Rendering，客户端渲染），我们开发的 SPA 页面通常依赖的就是客户端渲染
+  - 不利于 SEO 优化和首屏的渲染速度
+
+早期的服务端渲染包括 PHP、JSP、ASP 等方式，但是在目前前后端分离的开发模式下，前端开发人员不太可能再去学习 PHP、JSP 等技术来开发网页
+
+不过我们可以借助于 Node 来帮助我们执行 JavaScript 代码，提前完成页面的渲染
+
+![image-20221230162231748](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221230162231748.png)
+
+SSR 同构应用
+
+- 一套代码既可以在服务端运行又可以在客户端运行，这就是同构应用
+
+同构是一种 SSR 的形态，是现代 SSR 的一种表现形式
+
+- 当用户发出请求时，先在服务器通过 SSR 渲染出首页的内容
+- 但是对应的代码同样可以在客户端被执行
+- 执行的目的包括事件绑定等以及其他页面切换时也可以在客户端被渲染
+
+什么是 Hydration？
+
+在进行 SSR 时，我们的页面会呈现为 HTML
+
+- 但仅 HTML 不足以使页面具有交互性。例如，浏览器端 JavaScript 为零的页面不能是交互式的（没有 JavaScript 事件处理程序来响应用户操作，例如单击按钮）
+- 为了使我们的页面具有交互性，除了在 Node.js 中将页面呈现为 HTML 之外，我们的 UI 框架（Vue/React/...）还在浏览器中加载和呈现页面。（它创建页面的内部表示，然后将内部表示映射到我们在 Node.js 中呈现的 HTML 的 DOM 元素）
+
+useId 是一个用于生成横跨服务端和客户端的稳定的唯一 ID 的同时避免 hydration 不匹配的 hook
+
+- useId 是用于 react 的同构应用开发的，前端的 SPA 页面并不需要使用它
+- useId 可以保证应用程序在客户端和服务器端生成唯一的 ID，这样可以有效的避免通过一些手段生成的 id 不一致，造成 hydration mismatch
+
+```jsx
+import React, { memo, useId, useState } from 'react'
+
+const App = memo(() => {
+  const [count, setCount] = useState(0)
+  const id = useId()
+  console.log(id)
+  return (
+    <div>
+      <button onClick={e => setCount(count + 1)}>count+1:{count}</button>
+      <label htmlFor={id}>
+        用户名:
+        <input id={id} type='text' />
+      </label>
+    </div>
+  )
+})
+```
+
+## useTransition
+
+返回一个状态值表示过渡任务的等待状态，以及一个启动该过渡任务的函数
+
+- 其实在告诉 react 对于某部分任务的更新优先级较低，可以稍后进行更新。
+
+```jsx
+import React, { memo, useState, useTransition } from 'react'
+import { faker } from '@faker-js/faker'
+
+const namesArray = new Array(10000).fill(0).map(() => faker.name.fullName())
+
+const App = memo(() => {
+  const [showNames, setShowNames] = useState(namesArray)
+  const [pending, startTransition] = useTransition()
+
+  function valueChangeHandle(event) {
+    startTransition(() => {
+      const keyword = event.target.value
+      const filterShowNames = namesArray.filter(item => item.includes(keyword))
+      setShowNames(filterShowNames)
+    })
+  }
+  return (
+    <div>
+      <input type='text' onInput={valueChangeHandle} />
+      <h2>用户名列表: {pending && <span>data loading</span>} </h2>
+      <ul>
+        {showNames.map((item, index) => {
+          return <li key={index}>{item}</li>
+        })}
+      </ul>
+    </div>
+  )
+})
+```
+
+## useDeferredValue 
+
+接受一个值，并返回该值的新副本，该副本将推迟到更紧急地更新之后
+
+- useDeferredValue 的作用和 useTransition 是一样的效果
+
+```jsx
+import React, { memo, useState, useDeferredValue } from 'react'
+import { faker } from '@faker-js/faker'
+
+const namesArray = new Array(10000).fill(0).map(() => faker.name.fullName())
+
+const App = memo(() => {
+  const [showNames, setShowNames] = useState(namesArray)
+  const deferedShowNames = useDeferredValue(showNames)
+
+  function valueChangeHandle(event) {
+    const keyword = event.target.value
+    const filterShowNames = namesArray.filter(item => item.includes(keyword))
+    setShowNames(filterShowNames)
+  }
+  return (
+    <div>
+      <input type='text' onInput={valueChangeHandle} />
+      <h2>用户名列表: </h2>
+      <ul>
+        {deferedShowNames.map((item, index) => {
+          return <li key={index}>{item}</li>
+        })}
+      </ul>
+    </div>
+  )
+})
+```
+
