docs: 完成初始化渲染

--- a/React-/1-3.Fiber.md
+++ b/React-/1-3.Fiber.md
@@ -702,7 +702,7 @@ const workLoop = deadline => {
 
 ![image-20230118151952615](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230118151952615.png)
 
-### 构建剩余子节点的 Fiber 对象
+## 构建剩余子节点的 Fiber 对象
 
 当左侧节点构建完成之后我们定位的应该是最后一个子节点，就根据这个最后一个子节点去查找剩余节点，如果当前节点有同级就去构建该节点。如果没有就退回他的父级，查看他的父级有没有同级，一直退回查找构建 fiber 对象，将所有剩余子节点构建 fiber 对象
 
@@ -735,23 +735,77 @@ const executeTask = fiber => {
 - 所有 fiber 对象都有 effects 数组，最外层 fiber 对象的 effects 数组存放所有的 fiber 对象
 - 其他 effects 数组负责协助收集 fiber 对象，最终我们将所有收集的 fiber  对象汇总收集到最外层 fiber 对象的 effects 数组中
 
+## 构建 Effect 数组
+
 思路：
 
 - 当左侧节点树种的节点全部构建完成以后，我们开启一个 while 循环去构建其他节点过程时，我们会找到每一个节点**父级 fiber 对象**，这样我们就可以为每一个节点 effects 数组添加 fiber 对象了
 
+![image-20230118180235464](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230118180235464.png)
+
 ```js
 const executeTask = fiber => {
+  console.log(fiber)
   let currentExecuteFiber = fiber
   while (currentExecuteFiber.parent) {
     currentExecuteFiber.parent.effects = currentExecuteFiber.parent.effects.concat(
       currentExecuteFiber.effects.concat([currentExecuteFiber])
     )
   }
-  console.log(fiber)
+  console.log(currentExecuteFiber)
 }
 ```
 
-![image-20230118180235464](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230118180235464.png)
+![image-20230119094021968](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230119094021968.png)
+
+## 实现初始化渲染
+
+在 fiber 第二个阶段当中我们要做真实 dom 操作，我们要去构建 dom 节点之间的关系，在构建完成后我们要把真实 dom 添加到页面当中
+
+1. 将 currentExecutedFiber 提升为全局变量 因为在调用第二阶段渲染函数的时候，需要 currentExecutedFiber 这个变量传递给第二阶段的方法
+
+   ```jsx
+   let pendingCommit = null
+   
+   const commitAllWork = fiber => {
+     console.log(fiber.effects)
+   }
+   
+   const executeTask = fiber => {
+     // ...
+     pendingCommit = currentExecuteFiber
+   }
+   
+   const workLoop = deadline => {
+   	// ...
+     if (pendingCommit) {
+       commitAllWork(pendingCommit)
+     }
+   }
+   
+   const jsx = (<div>
+     <p>Hello React</p>
+     <p>我是同级子节点</p>
+   </div>)
+   ```
+
+2. 将 currentExecutedFiber 在 commitAllWork 遍历，操作 fiber 对象
+
+   ![image-20230119105238478](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230119105238478.png)
+
+   第一个是文本节点，所以我们是倒序获取 fiber 对象的，也就是从左侧最后一个子节点开始收集的，我们先确定每个 fiber 对象的 effectTag 是什么类型再对其进行相应的操作，如果是 placement 则进行节点追加操作
+
+   ```js
+   const commitAllWork = fiber => {
+     fiber.effects.forEach(item => {
+       if (item.effectTag === 'placement') {
+         item.parent.stateNode.appendChild(item.stateNode)
+       }
+     })
+   }
+   ```
+
+## 类组件处理
 
 
 
