feat: 处理类组件

--- a/React-/1-3.Fiber.md
+++ b/React-/1-3.Fiber.md
@@ -807,7 +807,121 @@ const executeTask = fiber => {
 
 ## 类组件处理
 
+**准备类组件**
 
+首先我们准备好一个类型组件，类组件需要继承 Component 类，并新建一个文件夹 Component 在里面创建 index.js 存放 Component 类
+
+```jsx
+import React, { render, Component } from './react'
+class Greeting extends Component {
+  constructor(props) {
+    super(props)
+  }
+  render() {
+    return <p>Hello React</p>
+  }
+}
+render(<Greeting />, root)
+
+// Component/index.js
+export class Component {
+  constructor(props) {
+    this.props = props
+  }
+}
+```
+
+**构建组件 tag 属性**
+
+这样处理后，打印 newFiber，得到的 tag 是 undefined，因为 getTag 方法中我们只处理了 type -> string 的情况
+
+![image-20230119144909625](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230119144909625.png)
+
+```js
+import { Component } from '../../Component'
+const getTag = vdom => {
+  if (typeof vdom.type === 'string') {
+    return 'host_component'
+  } else if (Object.getPrototypeOf(vdom.type) === Component) {
+    return 'class_component'
+  } else {
+    return 'function_component'
+  }
+}
+```
+
+![image-20230119144945669](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230119144945669.png)
+
+**构建组件 stateNode 属性**
+
+stateNode 还是 undefined，如果这个 DOM 节点是一个普通的元素则存储的是一个普通的 DOM 实例对象，一共处理两种组件：函数、类组件
+
+```js
+// Misc/CreateReactInstance/index.js
+export const createReactInstance = fiber => {
+  let instance = null
+  if (fiber.tag === 'class_component') {
+    instance = new fiber.type(fiber.props)
+  } else {
+    instance = fiber.type
+  }
+  return instance
+}
+
+// Misc/CreateStateNode/index.js
+import { createDOMElement } from '../../DOM'
+import { createReactInstance } from '../CreateReactInstance'
+const createStateNode = fiber => {
+  if (fiber.tag === 'host_component') {
+    return createDOMElement(fiber)
+  } else {
+    return createReactInstance(fiber)
+  }
+}
+```
+
+![image-20230119161434214](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230119161434214.png)
+
+**优化 executeTask 方法**
+
+如果是组件，他的子级就不是直接 fiber.props.children 了，而是类组件里面 render 方法返回的内容，所以调用 reconcileChildren 方法的时候需要帕努单是组件还是普通元素，是组件的话调用 render 方法
+
+```js
+const executeTask = fiber => {
+  if (fiber.tag === 'class_component') {
+    reconcileChildren(fiber, fiber.stateNode.render())
+  } else {
+    reconcileChildren(fiber, fiber.props.children)
+  }
+	// ...
+}
+```
+
+这样就拿到组件子元素了
+
+![image-20230119162010307](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230119162010307.png)
+
+**commitAllWork 处理**
+
+因为类组件本身也是一个节点，但是类组件本身的节点是不可以追加元素的。所以我们要往父级查找，直到父级不是组件而是普通元素就开始做元素追加操作
+
+```js
+const commitAllWork = fiber => {
+  fiber.effects.forEach(item => {
+    if (item.effectTag === 'placement') {
+      let fiber = item
+      let parentFiber = item.parent
+      while (parentFiber.tag === 'class_component') {
+        parentFiber = parentFiber.parent
+      }
+      if (fiber.tag === 'host_component') {
+        parentFiber.stateNode.appendChild(fiber.stateNode)
+      }
+      item.parent.stateNode.appendChild(item.stateNode)
+    }
+  })
+}
+```
 
 # 参考
 
