--- a/React-/1-3.Fiber.md
+++ b/React-/1-3.Fiber.md
@@ -923,6 +923,56 @@ const commitAllWork = fiber => {
 }
 ```
 
+## 函数组件处理
+
+准备一个函数式组件
+
+```js
+function FnComponent(){
+  return <div>FnComponent</div>
+}
+render(<FnComponent />, root)
+```
+
+![image-20230119162806760](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230119162806760.png)
+
+**executeTask 处理函数组件**
+
+```js
+const executeTask = fiber => {
+  if (fiber.tag === 'class_component') {
+    reconcileChildren(fiber, fiber.stateNode.render())
+  } else if (fiber.tag === 'function_component') {
+    reconcileChildren(fiber, fiber.stateNode(fiber.props))
+  } else {
+    reconcileChildren(fiber, fiber.props.children)
+  }
+}
+```
+
+```js
+const commitAllWork = fiber => {
+  fiber.effects.forEach(item => {
+    if (item.effectTag === 'placement') {
+      let fiber = item
+      let parentFiber = item.parent
+      while (
+        parentFiber.tag === 'class_component' ||
+        parentFiber.tag === 'function_component'
+      ) {
+        parentFiber = parentFiber.parent
+      }
+      if (fiber.tag === 'host_component') {
+        parentFiber.stateNode.appendChild(fiber.stateNode)
+      }
+      item.parent.stateNode.appendChild(item.stateNode)
+    }
+  })
+}
+```
+
+
+
 # 参考
 
 > - [核心API"requestIdleCallback"的认知和旧版Stack问题，Fiber认知](https://juejin.cn/post/6975825597092069389)
