--- a/React-/1-3.Fiber.md
+++ b/React-/1-3.Fiber.md
@@ -950,6 +950,8 @@ const executeTask = fiber => {
 }
 ```
 
+**处理函数组件内容渲染到页面**
+
 ```js
 const commitAllWork = fiber => {
   fiber.effects.forEach(item => {
@@ -971,7 +973,208 @@ const commitAllWork = fiber => {
 }
 ```
 
+## 更新节点 oldFiber/newFiber
 
+这两个JSX只是从 **Hello React** 替换成 **奥利给** 操作，当 dom 初始化完成渲染之后，我们去备份旧的 fiber 对象，在两秒钟之后我们又调用了 render 方法，就会去创建新的 fiber 对象了
+
+创建 fiber 对象的时候我们会看一下 fiber 节点存不存在，如果旧的 fiber 对象存在则说明当前我们要执行更新操作
+
+```js
+const jsx = (
+  <div>
+    <p>Hello React</p>
+    <p>Hi Fiber</p>
+  </div>
+)
+render(jsx, root)
+
+setTimeout(() => {
+  const jsx = (
+    <div>
+      <p>奥利给</p>
+      <p>Hi Fiber</p>
+    </div>
+  )
+  render(jsx, root)
+}, 2000)
+```
+
+**commitAllWork 方法，执行的就是 dom　操作**
+
+```js
+const commitAllWork = fiber => {
+  // ...
+  // 备份旧的 fiber 节点对象
+  fiber.stateNode.__rootFiberContainer = fiber
+}
+```
+
+在创建新 fiber 对象的时候，将旧 fiber 对象存储到 alternate 中，在构建更新 fiber 对象的时候会用
+
+```js
+const getFirstTask = () => {
+  // ...
+  return {
+    // ...
+    alternate: task.dom.__rootFiberContainer
+  }
+}
+```
+
+**reconcileChildren**
+
+这个方法我们要判断 fiber 对象需要进行什么样的操作，去构建不同操作类型的 fiber 对象
+
+1. 先获取备份节点
+
+   定义一个 alternate 变量，接收备份节点，如果 fiber.alternate 有值则说明有备份节点，则获取备份节点的子节点
+
+   如果都有值将 fiber.alternate.child 赋值给 alternate
+
+   ```js
+   let alternate = null
+   
+   if (fiber.alternate && fiber.alternate.child) {
+   	alternate = fiber.alternate.child
+   }
+   ```
+
+2. 更新各个子节点的 alternate，当方法里面不循环不执行的时候，第一次循环就是第一个子节点，第二次是找到第二个子节点...
+
+   ```js
+   if (alternate && alternate.sibling) {
+     alternate = alternate.sibling
+   } else {
+     alternate = null
+   }
+   ```
+
+3. 确定操作类型，我们是做初渲染？还是更新？还是删除？
+
+   如果 element 存在，alternate 不存在，做的是初始渲染操作
+
+   如果 element 存在，alternate 存在，做的是更新操作
+
+   ```js
+   const reconcileChildren = (fiber, children) => {
+     // ...
+     while (index < numberOfElements) {
+       /**
+        * 子级 virtualDOM 对象
+        */
+       element = arrifiedChildren[index]
+   
+       if (element && alternate) {
+         // 更新操作
+         newFiber = {
+           type: element.type,
+           props: element.props,
+           tag: getTag(element),
+           effects: [],
+           effectTag: 'update',
+           parent: fiber,
+           alternate
+         }
+         if (element.type === alternate.type) {
+           // 类型相同
+           newFiber.stateNode = alternate.stateNode
+         } else {
+           // 类型不同
+           newFiber.stateNode = createStateNode(newFiber)
+         }
+       } else if (element && !alternate) {
+         // 初始渲染
+         /**
+          * 子级 fiber 对象
+          */
+         newFiber = {
+           type: element.type,
+           props: element.props,
+           tag: getTag(element),
+           effects: [],
+           effectTag: 'placement',
+           parent: fiber
+         }
+   
+         /**
+          * 为 fiber 节点添加 DOM 对象或组件实例对象
+          */
+         newFiber.stateNode = createStateNode(newFiber)
+   
+         console.log(newFiber)
+   
+         // 为父级 fiber 添加子级 fiber
+         if (index === 0) {
+           fiber.child = newFiber
+         } else {
+           // 为 fiber 添加下一个兄弟 fiber
+           prevFiber.sibling = newFiber
+         }
+   
+         if (alternate && alternate.sibling) {
+           alternate = alternate.sibling
+         } else {
+           alternate = null
+         }
+   
+         prevFiber = newFiber
+         index++
+       }
+     }
+   }
+   ```
+
+4. 执行 DOM 操作
+
+   在 commitAllWork 中判断 effectTag 是 update 时对 dom 进行更新
+
+   ```js
+   const commitAllWork = fiber => {
+     fiber.effects.forEach(item => {
+       if (item.effectTag === 'update') {
+         if (item.type === item.alternate.type) {
+           // 节点类型相同
+           updateNodeElement(item.stateNode, item, item.alternate)
+         } else {
+           // 节点类型不同
+           item.parent.stateNode.replaceChild(item.stateNode, item.alternate.stateNode)
+         }
+       }
+     })
+   }
+   ```
+
+## 实现节点删除操作
+
+优化 reconcileChildren 方法
+
+```js
+const reconcileChildren = (fiber, children) => {
+  // ...
+  while (index < numberOfElements || alternate) {
+    // ...
+    if (!element && alternate) {
+      // 删除操作
+      alternate.effectTag = 'delete'
+      fiber.effects.push(alternate)
+    }
+  }
+}
+```
+
+完成删除 DOM 操作
+
+```js
+const commitAllWork = fiber => {
+  fiber.effects.forEach(item => {
+    if (item.effectTag === 'delete') {
+      item.parent.stateNode.removeChild(item.stateNode)
+    }
+  }
+}
+```
+
+## 类组件更新
 
 # 参考
 
