--- a/React-/1-4核心源码.md
+++ b/React-/1-4核心源码.md
@@ -168,3 +168,394 @@
 ## 创建 React 元素
 
 JSX 被 Babel 编译为 React.createElement 方法的调用，createElement 方法在调用后返回的就是 ReactElement，就是 virtualDOM
+
+1. 分离 props 属性和特殊属性
+2. 将子元素挂载到 props.children 中
+3. 为 props 属性赋默认值 (defaultProps)
+4. 创建并返回 ReactElement
+
+```js
+/**
+ * 创建 React Element
+ * type      元素类型
+ * config    配置属性
+ * children  子元素
+ */
+export function createElement(type, config, children) { }
+```
+
+1. object 是对象
+2. object 不为 null
+3. object 对象中的 $$typeof 属性值为 REACT_ELEMENT_TYPE
+
+```js
+export function isValidElement(object) {
+  return (
+    typeof object === 'object' &&
+    object !== null &&
+    object.$$typeof === REACT_ELEMENT_TYPE
+  );
+}
+```
+
+## React 架构
+
+React 16 版本的架构可以分为三层：调度层、协调层、渲染层。
+
+- Scheduler (调度层)：调度任务的优先级，高优任务优先进入协调器
+- Reconciler (协调层)：构建 Fiber 数据结构，比对 Fiber 对象找出差异, 记录 Fiber 对象要进行的 DOM 操作
+- Renderer (渲染层)：负责将发生变化的部分渲染到页面上
+
+**Scheduler 调度层**
+
+在 React 15 的版本中，采用了循环加递归的方式进行了 virtualDOM 的比对，由于递归使用 JavaScript 自身的执行栈，一旦开始就无法停止，直到任务执行完成。如果 VirtualDOM 树的层级比较深，virtualDOM 的比对就会长期占用 JavaScript 主线程，由于 JavaScript 又是单线程的无法同时执行其他任务，所以在比对的过程中无法响应用户操作，无法即时执行元素动画，造成了页面卡顿的现象
+
+在 React 16 的版本中，放弃了 JavaScript 递归的方式进行 virtualDOM 的比对，而是采用循环模拟递归。而且比对的过程是利用浏览器的空闲时间完成的，不会长期占用主线程，这就解决了 virtualDOM 比对造成页面卡顿的问题
+
+在 window 对象中提供了 requestIdleCallback API，它可以利用浏览器的空闲时间执行任务，但是它自身也存在一些问题，比如说并不是所有的浏览器都支持它，而且它的触发频率也不是很稳定，所以 React 最终放弃了 requestIdleCallback 的使用
+
+在 React 中，官方实现了自己的任务调度库，这个库就叫做 Scheduler。它也可以实现在浏览器空闲时执行任务，而且还可以设置任务的优先级，高优先级任务先执行，低优先级任务后执行
+
+Scheduler 存储在 `packages/scheduler` 文件夹中
+
+**Reconciler 协调层**
+
+在 React 15 的版本中，协调器和渲染器交替执行，即找到了差异就直接更新差异。在 React 16 的版本中，这种情况发生了变化，协调器和渲染器不再交替执行。协调器负责找出差异，在所有差异找出之后，统一交给渲染器进行 DOM 的更新。也就是说协调器的主要任务就是找出差异部分，并为差异打上标记
+
+**Renderer 渲染层**
+
+渲染器根据协调器为 Fiber 节点打的标记，同步执行对应的 DOM 操作
+
+既然比对的过程从递归变成了可以中断的循环，那么 React 是如何解决中断更新时 DOM 渲染不完全的问题呢
+
+其实根本就不存在这个问题，因为在整个过程中，调度器和协调器的工作是在内存中完成的是可以被打断的，渲染器的工作被设定成不可以被打断，所以不存在DOM 渲染不完全的问题
+
+## 数据结构
+
+### 1.Fiber
+
+```js
+type Fiber = {
+  /************************  DOM 实例相关  *****************************/
+  
+  // 标记不同的组件类型, 值详见 WorkTag
+  tag: WorkTag,
+
+  // 组件类型 div、span、组件构造函数
+  type: any,
+
+  // 实例对象, 如类组件的实例、原生 dom 实例, 而 function 组件没有实例, 因此该属性是空
+  stateNode: any,
+ 
+	/************************  构建 Fiber 树相关  ***************************/
+  
+  // 指向自己的父级 Fiber 对象
+  return: Fiber | null,
+
+  // 指向自己的第一个子级 Fiber 对象
+  child: Fiber | null,
+  
+  // 指向自己的下一个兄弟 iber 对象
+  sibling: Fiber | null,
+  
+  // 在 Fiber 树更新的过程中，每个 Fiber 都会有一个跟其对应的 Fiber
+  // 我们称他为 current <==> workInProgress
+  // 在渲染完成之后他们会交换位置
+  // alternate 指向当前 Fiber 在 workInProgress 树中的对应 Fiber
+	alternate: Fiber | null,
+		
+  /************************  状态数据相关  ********************************/
+  
+  // 即将更新的 props
+  pendingProps: any, 
+  // 旧的 props
+  memoizedProps: any,
+  // 旧的 state
+  memoizedState: any,
+		
+  /************************  副作用相关 ******************************/
+
+  // 该 Fiber 对应的组件产生的状态更新会存放在这个队列里面 
+  updateQueue: UpdateQueue<any> | null,
+  
+  // 用来记录当前 Fiber 要执行的 DOM 操作
+  effectTag: SideEffectTag,
+
+  // 存储第一个要执行副作用的子级 Fiber 对象
+  firstEffect: Fiber | null,
+  
+  // 存储下一个要执行副作用的子级 Fiber 对象
+  // 执行 DOM 渲染时要先通过 first 找到第一个, 然后通过 next 一直向后查找
+  nextEffect: Fiber | null,
+  
+  // 存储 DOM 操作完后的副作用 比如调用生命周期函数或者钩子函数的调用
+  lastEffect: Fiber | null,
+
+  // 任务的过期时间
+  expirationTime: ExpirationTime,
+  
+	// 当前组件及子组件处于何种渲染模式 详见 TypeOfMode
+  mode: TypeOfMode,
+};
+```
+
+![6](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/6.png)
+
+### 2.WorkTag
+
+`packages/shared/ReactWorkTags.js`
+
+```js
+type WorkTag =
+  | 0
+  | 1
+  | 2
+  | 3
+  | 4
+  | 5
+  | 6
+  | 7
+  | 8
+  | 9
+  | 10
+  | 11
+  | 12
+  | 13
+  | 14
+  | 15
+  | 16
+  | 17
+  | 18
+  | 19
+  | 20
+  | 21
+  | 22;
+
+export const FunctionComponent = 0;
+export const ClassComponent = 1;
+export const IndeterminateComponent = 2;
+export const HostRoot = 3;
+export const HostPortal = 4;
+export const HostComponent = 5;
+export const HostText = 6;
+export const Fragment = 7;
+export const Mode = 8;
+export const ContextConsumer = 9;
+export const ContextProvider = 10;
+export const ForwardRef = 11;
+export const Profiler = 12;
+export const SuspenseComponent = 13;
+export const MemoComponent = 14;
+export const SimpleMemoComponent = 15;
+export const LazyComponent = 16;
+export const IncompleteClassComponent = 17;
+export const DehydratedFragment = 18;
+export const SuspenseListComponent = 19;
+export const FundamentalComponent = 20;
+export const ScopeComponent = 21;
+export const Block = 22;
+```
+
+### 3.TypeOfMode
+
+` packages/react-reconciler/src/ReactTypeOfMode.js`
+
+```js
+export type TypeOfMode = number;
+
+// 0 同步渲染模式
+export const NoMode = 0b0000;
+// 1 严格模式
+export const StrictMode = 0b0001;
+// 10 异步渲染过渡模式
+export const BlockingMode = 0b0010;
+// 100 异步渲染模式
+export const ConcurrentMode = 0b0100;
+// 1000 性能测试模式
+export const ProfileMode = 0b1000;
+```
+
+### 4.SideEffectTag
+
+`packages/shared/ReactSideEffectTags.js`
+
+```js
+export type SideEffectTag = number;
+
+// Don't change these two values. They're used by React Dev Tools.
+export const NoEffect = /*              */ 0b0000000000000; // 0
+export const PerformedWork = /*         */ 0b0000000000001; // 1
+
+// You can change the rest (and add more).
+export const Placement = /*             */ 0b0000000000010; // 2
+export const Update = /*                */ 0b0000000000100; // 4
+export const PlacementAndUpdate = /*    */ 0b0000000000110; // 6
+export const Deletion = /*              */ 0b0000000001000; // 8
+export const ContentReset = /*          */ 0b0000000010000; // 16
+export const Callback = /*              */ 0b0000000100000; // 32
+export const DidCapture = /*            */ 0b0000001000000; // 64
+export const Ref = /*                   */ 0b0000010000000; // 128
+export const Snapshot = /*              */ 0b0000100000000; // 256
+export const Passive = /*               */ 0b0001000000000; // 512
+export const Hydrating = /*             */ 0b0010000000000; // 1024
+export const HydratingAndUpdate = /*    */ 0b0010000000100; // 1028
+
+// Passive & Update & Callback & Ref & Snapshot
+export const LifecycleEffectMask = /*   */ 0b0001110100100; // 932
+
+// Union of all host effects
+export const HostEffectMask = /*        */ 0b0011111111111; // 2047
+
+export const Incomplete = /*            */ 0b0100000000000; // 2048
+export const ShouldCapture = /*         */ 0b1000000000000; // 4096
+```
+
+### 5.Update
+
+```react
+let update: Update<*> = {
+  expirationTime,
+  suspenseConfig,
+
+  tag: UpdateState,
+  payload: null,
+  callback: null,
+
+  next: (null: any),
+};
+```
+
+### 6.UpdateQueue
+
+```react
+const queue: <State> = {
+  // 上一次更新之后的 state, 作为下一次更新的基础
+  baseState: fiber.memoizedState,
+  baseQueue: null,
+  shared: {
+    pending: null,
+  },
+  effects: null,
+}
+fiber.updateQueue = queue;
+```
+
+### 7.RootTag
+
+`packages/shared/ReactRootTags.js`
+
+```react
+export type RootTag = 0 | 1 | 2;
+
+// ReactDOM.render
+export const LegacyRoot = 0;
+// ReactDOM.createBlockingRoot
+export const BlockingRoot = 1;
+// ReactDOM.createRoot
+export const ConcurrentRoot = 2;
+```
+
+### 8.双缓存技术
+
+在 React 中，DOM 的更新采用了双缓存技术，双缓存技术致力于更快速的 DOM 更新。
+
+什么是双缓存？举个例子，使用 canvas 绘制动画时，在绘制每一帧前都会清除上一帧的画面，清除上一帧需要花费时间，如果当前帧画面计算量又比较大，又需要花费比较长的时间，这就导致上一帧清除到下一帧显示中间会有较长的间隙，就会出现白屏。
+
+为了解决这个问题，我们可以在内存中绘制当前帧动画，绘制完毕后直接用当前帧替换上一帧画面，这样的话在帧画面替换的过程中就会节约非常多的时间，就不会出现白屏问题。这种在内存中构建并直接替换的技术叫做双缓存。
+
+React 使用双缓存技术完成 Fiber 树的构建与替换，实现DOM对象的快速更新。
+
+在 React 中最多会同时存在两棵 Fiber 树，当前在屏幕中显示的内容对应的 Fiber 树叫做 current Fiber 树，当发生更新时，React 会在内存中重新构建一颗新的 Fiber 树，这颗正在构建的 Fiber 树叫做 workInProgress Fiber 树。在双缓存技术中，workInProgress Fiber 树就是即将要显示在页面中的 Fiber 树，当这颗 Fiber 树构建完成后，React 会使用它直接替换 current Fiber 树达到快速更新 DOM 的目的，因为 workInProgress Fiber 树是在内存中构建的所以构建它的速度是非常快的。
+
+一旦 workInProgress Fiber 树在屏幕上呈现，它就会变成 current Fiber 树。
+
+在 current Fiber 节点对象中有一个 alternate 属性指向对应的 workInProgress Fiber 节点对象，在 workInProgress Fiber 节点中有一个 alternate 属性也指向对应的 current Fiber 节点对象。
+
+<img src="https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/3.png" width="40%"/>
+
+<img src="https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/4.png" width="40%"/>
+
+### 9. 区分 fiberRoot 与 rootFiber
+
+fiberRoot 表示 Fiber 数据结构对象，是 Fiber 数据结构中的最外层对象
+
+rootFiber 表示组件挂载点对应的 Fiber 对象，比如 React 应用中默认的组件挂载点就是 id 为 root 的 div
+
+fiberRoot 包含 rootFiber，在 fiberRoot 对象中有一个 current 属性，存储 rootFiber
+
+rootFiber 指向 fiberRoot，在 rootFiber 对象中有一个 stateNode 属性，指向 fiberRoot
+
+在 React 应用中 FiberRoot 只有一个，而 rootFiber 可以有多个，因为 render 方法是可以调用多次的
+
+fiberRoot 会记录应用的更新信息，比如协调器在完成工作后，会将工作成果存储在 fiberRoot 中
+
+<img src="E:\learn\lagouBigFront\md\React-\img\7.png" width="90%" align="left"/>
+
+## 初始化渲染
+
+要将 React 元素渲染到页面中，分为两个阶段，render 阶段和 commit 阶段。
+
+render 阶段负责创建 Fiber 数据结构并为 Fiber 节点打标记，标记当前 Fiber 节点要进行的 DOM 操作。
+
+commit 阶段负责根据 Fiber 节点标记 ( effectTag ) 进行相应的 DOM 操作。
+
+### render 阶段
+
+`packages/react-dom/src/client/ReactDOMLegacy.js`
+
+```js
+/**
+ * 渲染入口
+ * element 要进行渲染的 ReactElement, createElement 方法的返回值
+ * container 渲染容器 <div id="root"></div>
+ * callback 渲染完成后执行的回调函数
+ */
+export function render(
+  element: React$Element<any>,
+  container: Container,
+  callback: ?Function,
+) {
+  // 检测 container 是否是符合要求的渲染容器
+  // 即检测 container 是否是真实的DOM对象
+  // 如果不符合要求就报错
+  invariant(
+    isValidContainer(container),
+    'Target container is not a DOM element.',
+  );
+  return legacyRenderSubtreeIntoContainer(
+    // 父组件 初始渲染没有父组件 传递 null 占位
+    null,
+    element,
+    container,
+    // 是否为服务器端渲染 false 不是服务器端渲染 true 是服务器端渲染
+    false,
+    callback,
+  );
+}
+```
+
+`packages/react-dom/src/client/ReactDOMRoot.js`
+
+```js
+/**
+ * 判断 node 是否是符合要求的 DOM 节点
+ * 1. node 可以是元素节点
+ * 2. node 可以是 document 节点
+ * 3. node 可以是 文档碎片节点
+ * 4. node 可以是注释节点但注释内容必须是 react-mount-point-unstable
+ *    react 内部会找到注释节点的父级 通过调用父级元素的 insertBefore 方法
+ *    将 element 插入到注释节点的前面
+ */
+export function isValidContainer(node: mixed): boolean {
+  return !!(
+    node &&
+    (node.nodeType === ELEMENT_NODE ||
+      node.nodeType === DOCUMENT_NODE ||
+      node.nodeType === DOCUMENT_FRAGMENT_NODE ||
+      (node.nodeType === COMMENT_NODE &&
+        (node: any).nodeValue === ' react-mount-point-unstable '))
+  );
+}
+```
+
+### 
