docs: 完善面试题md

--- a/Engineering/面试题.md
+++ b/Engineering/面试题.md
@@ -8,6 +8,8 @@
 
   ES Module 导出的是引用值，之前都存在映射关系，并且值都是可读的，不能修改
 
+
+
 ## 输入 URL 
 
 1. URL 解析
@@ -142,6 +144,10 @@
 - `async`是异步执行，异步下载完毕后就会执行，不确保执行顺序，一定在`onload`前，但不确定在`DOMContentLoaded`事件的前或后
 - `defer`是延迟执行，在浏览器看起来的效果像是将脚本放在了`body`后面一样（虽然按规范应该是在`DOMContentLoaded`事件前，但实际上不同浏览器的优化效果不一样，也有可能在它后面）
 
+
+
+
+
 ## 性能优化
 
 1. 资源优化
@@ -179,6 +185,8 @@ webpack 生产环境优化
 开发环境优化
 
 - 优化 source-map
+
+
 
 ## http
 
@@ -218,3 +226,82 @@ webpack 生产环境优化
 - 416，`Range Not Satisfiable`。任意视频传一个不存在的 range
 - 502，`Bad Gateway`。某个服务挂了，或者服务所在节点网络不通
 - 504，`Gateway Time-out`。服务能连上，但是一直没有返回 response，超过时间限制（nginx timeout）就会 504
+
+
+
+## npm
+
+dep
+
+- dependencies：项目运行时所依赖的模块
+- devDependencies：项目开发时所需要的模块
+- peerDependencies：当前模块所在的宿主环境所需要的模块及其版本
+
+入口字段
+
+- main：定义 npm 包的入口文件，browser 环境和 node 环境均可使用
+- module：定义 npm 包 ESM 规范的入口文件，browser 环境和 node 环境均可使用
+- browser：定义 npm 包在 browser 环境下的入口文件
+
+优先级： **`browser` = `browser+mjs` > `module` > `browser+cjs` > `main`**
+
+tree-shaking
+
+- sideEffects：配置 sideEffects: false，再次进行打包，该模块都被 tree-shaking 掉，包括包含副作用的代码
+- files：描述你 npm publish 的时候推送到 npm 服务器的文件列表
+
+
+
+## 事件循环
+
+```bash
+   ┌───────────────────────┐
+┌─>│        timers         │
+│  └──────────┬────────────┘
+│  ┌──────────┴────────────┐
+│  │     I/O callbacks     │
+│  └──────────┬────────────┘
+│  ┌──────────┴────────────┐
+│  │     idle, prepare     │
+│  └──────────┬────────────┘      ┌───────────────┐
+│  ┌──────────┴────────────┐      │   incoming:   │
+│  │         poll          │<──connections───     │
+│  └──────────┬────────────┘      │   data, etc.  │
+│  ┌──────────┴────────────┐      └───────────────┘
+│  │        check          │
+│  └──────────┬────────────┘
+│  ┌──────────┴────────────┐
+└──┤    close callbacks    │
+   └───────────────────────┘
+```
+
+外部输入数据 --> 轮询阶段（poll） --> 检查阶段(check) --> 关闭事件回调阶段(close callback) --> 定时器检查阶段(timer) --> I/O 事件回调阶段(I/O callbacks) --> 闲置阶段(idle, prepare) --> 轮询阶段
+
+timers
+
+- 这个是定时器阶段，处理 setTimeout() 和 setInterval() 的回调函数。进入这个阶段后，主线程会检查一下当前时间，是否满足定时器的条件。如果满足就执行回调函数，否则就离开这个阶段
+
+I/O callbacks 
+
+- setTimeout() 和 setInterval() 的回调函数
+- setImmediate() 的回调函数
+- 用于关闭请求的回调函数，比如 socket.on('close', ...)
+
+idle
+
+- 闲置阶段(idle, prepare): 这个阶段仅在内部使用，可以不必理会
+
+poll
+
+- 这个阶段是轮询时间，用于等待还未返回的 I/O 事件，比如服务器的回应、用户移动鼠标等等。
+  这个阶段的时间会比较长
+- 如果没有其他异步任务要处理（比如到期的定时器），会一直停留在这个阶段，等待 I/O 请求返回结果
+
+check
+
+- 该阶段执行 setImmediate() 的回调函数
+
+close
+
+- 该阶段执行关闭请求的回调函数，比如 socket.on('close', ...)
+
